# internal/api/billingapi/oas_request_encoders_gen.go
@@ -1,0 +1,25 @@
+// Code generated by ogen, DO NOT EDIT.
+
+package billingapi
+
+import (
+	"bytes"
+	"net/http"
+
+	"github.com/go-faster/jx"
+	ht "github.com/ogen-go/ogen/http"
+)
+
+func encodeCreateCheckoutSessionRequest(
+	req *CreateCheckoutSessionInput,
+	r *http.Request,
+) error {
+	const contentType = "application/json"
+	e := new(jx.Encoder)
+	{
+		req.Encode(e)
+	}
+	encoded := e.Bytes()
+	ht.SetBody(r, bytes.NewReader(encoded), contentType)
+	return nil
+}
